--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "extension-build": "npm run build && npm --prefix ./scripts/ run rename-next-folder",
     "start": "next start",
     "lint": "next lint"
   },
