--- a/scripts/package.json
+++ b/scripts/package.json
@@ -4,12 +4,17 @@
   "description": "Utility scripts for wallet development",
   "main": "index.ts",
   "scripts": {
-    "rename-next-folder": "ts-node ./src/rename-next-folder.ts"
+    "rename-next-folder": "ts-node ./src/rename-next-folder.ts",
+    "codegen": "ts-node ./src/api-codegen/api-codegen.ts"
   },
   "author": "Furkan Alan",
   "license": "ISC",
   "devDependencies": {
     "ts-node": "^10.9.1",
     "typescript": "~4.5"
+  },
+  "dependencies": {
+    "@polkadot/api": "^10.9.1",
+    "@rtk-query/codegen-openapi": "^1.0.0"
   }
 }
