--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  // Copied from nextjs tsconfig.json
   "compilerOptions": {
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
@@ -9,7 +10,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "CommonJS", // Changed from esnext to commonjs
-    "moduleResolution": "node",
+    "moduleResolution": "node", // Changed from bundler to node
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
