--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,5 +6,11 @@
   "action": {
     "default_title": "Next.js Chrome Extension App",
     "default_popup": "index.html"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
+    }
+  ]
 }
