--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,5 +12,8 @@
       "matches": ["<all_urls>"],
       "js": ["content.js"]
     }
-  ]
+  ],
+  "background": {
+    "service_worker": "background.js"
+  }
 }
