--- a/scripts/package.json
+++ b/scripts/package.json
@@ -5,6 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "rename-next-folder": "ts-node ./src/rename-next-folder.ts",
+    "copy-extension-files": "ts-node ./src/copy-extension-files.ts",
     "codegen": "ts-node ./src/api-codegen/api-codegen.ts"
   },
   "author": "Furkan Alan",
