moving extension-ui to subfolder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
   "files.associations": {
     ".env.*": "properties",
     "*.css": "tailwindcss"
-  }
+  },
+  "eslint.workingDirectories": ["./extension-ui", "./extension-test-app"]
 }
