removed unused packages, and orginized scripts, there is problem with utility-scripts

--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "nextjs-chrome-extension",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "build": "npm run build --workspaces"
+    "build": "npm run build --workspaces --if-present",
+    "build:extension": "npm run build --workspace=app-ui --workspace=extension-specific && npm run rename-next-folder --workspace=utility-scripts && npm run copy-extension-files --workspace=utility-scripts"
   },
   "devDependencies": {
     "prettier": "^3.0.3",
