build process full automatic now, still codegen have problem

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "scripts": {
     "build": "npm run build --workspaces --if-present",
-    "build:extension": "npm run build --workspace=app-ui --workspace=extension-specific && npm run rename-next-folder --workspace=utility-scripts && npm run copy-extension-files --workspace=utility-scripts"
+    "build:extension": "npm run build --workspace=app-ui --workspace=extension-specific && npm run build-extension:ui --workspace=utility-scripts && npm run build-extension:specific --workspace=utility-scripts"
   },
   "devDependencies": {
     "prettier": "^3.0.3",
