--- a/packages/utility-scripts/package.json
+++ b/packages/utility-scripts/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "rename-next-folder": "ts-node ./src/rename-next-folder.ts",
-    "copy-extension-files": "ts-node ./src/copy-extension-files.ts",
+    "build-extension:ui": "ts-node ./src/build-extension/build-extension-ui.ts",
+    "build-extension:specific": "ts-node ./src/build-extension/build-extension-specific.ts",
     "codegen": "ts-node ./src/api-codegen/api-codegen.ts"
   },
   "dependencies": {
-    "@rtk-query/codegen-openapi": "^1.0.0"
+    "@rtk-query/codegen-openapi": "^1.0.0",
+    "fs-extra": "^11.1.1"
   },
   "devDependencies": {
+    "@types/fs-extra": "^11.0.1",
     "ts-node": "^10.9.1",
     "typescript": "~4.5"
   }
