codegen path edit. vscode typescript workspace version chosen.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,9 @@
     ".env.*": "properties",
     "*.css": "tailwindcss"
   },
-  "eslint.workingDirectories": ["./packages/app-ui", "./packages/extension-test-app"]
+  "eslint.workingDirectories": [
+    "./packages/app-ui",
+    "./packages/extension-test-app"
+  ],
+  "typescript.tsdk": "node_modules\\typescript\\lib"
 }
