removed "private:true" field, it causes dependency problems, updated extension-specific typescript version. removed all package-lock.json for now

--- a/packages/extension-specific/package.json
+++ b/packages/extension-specific/package.json
@@ -1,7 +1,6 @@
 {
   "name": "extension-specific",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "build": "webpack"
   },
@@ -9,7 +8,7 @@
     "random-words": "^2.0.0"
   },
   "devDependencies": {
-    "typescript": "~4.5",
+    "typescript": "^5.2.2",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   }
