--- a/packages/extension-specific/package.json
+++ b/packages/extension-specific/package.json
@@ -8,6 +8,8 @@
     "random-words": "^2.0.0"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
     "typescript": "^5.2.2",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
