--- a/packages/extension-specific/package.json
+++ b/packages/extension-specific/package.json
@@ -8,6 +8,7 @@
     "random-words": "^2.0.0"
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.244",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "typescript": "^5.2.2",
