--- a/packages/extension-specific/public/manifest.json
+++ b/packages/extension-specific/public/manifest.json
@@ -2,10 +2,7 @@
   "name": "Next JS Chrome Extension",
   "description": "Next.js Chrome Extension starter",
   "manifest_version": 3,
-  "action": {
-    "default_title": "Next.js Chrome Extension App",
-    "default_popup": "index.html"
-  },
+  "action": {},
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
@@ -14,5 +11,6 @@
   ],
   "background": {
     "service_worker": "background.js"
-  }
+  },
+  "permissions": ["activeTab", "scripting"]
 }
