--- a/packages/extension-specific/package.json
+++ b/packages/extension-specific/package.json
@@ -11,6 +11,7 @@
     "@types/chrome": "^0.0.244",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
+    "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
