--- a/packages/utility-scripts/tsconfig.json
+++ b/packages/utility-scripts/tsconfig.json
@@ -17,8 +17,7 @@
     "incremental": true,
     "paths": {
       // Added paths
-      "@/*": ["../src/*"],
-      "@scripts/*": ["./src/*"]
+      "@/*": ["../src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
