tsconfig path edits, added custom event to test app, edited typescript. App not building for now

--- a/packages/extension-specific/tsconfig.json
+++ b/packages/extension-specific/tsconfig.json
@@ -17,8 +17,7 @@
     "incremental": true,
     "paths": {
       // Added paths
-      "@/*": ["../src/*"],
-      "@scripts/*": ["./src/*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["**/*.ts", "**/*.tsx"],
