trying to use package referance instead of typescript path

--- a/packages/app-ui/tsconfig.json
+++ b/packages/app-ui/tsconfig.json
@@ -19,8 +19,7 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"],
-      "@extension/*": ["../extension-specific/src/*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
