--- a/packages/app-ui/package.json
+++ b/packages/app-ui/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "shared-lib": "*",
     "@reduxjs/toolkit": "^1.9.5",
     "next": "13.4.19",
     "react": "18.2.0",
