--- a/packages/app-ui/package.json
+++ b/packages/app-ui/package.json
@@ -8,12 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "shared-lib": "*",
     "@reduxjs/toolkit": "^1.9.5",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "^8.1.2"
+    "react-redux": "^8.1.2",
+    "shared-lib": "*"
   },
   "devDependencies": {
     "@types/node": "20.5.9",
