chrome dependency moved to shared-lib. Cleaner typescript

--- a/packages/shared-lib/package.json
+++ b/packages/shared-lib/package.json
@@ -1,6 +1,7 @@
 {
   "name": "shared-lib",
   "version": "0.1.0",
-  "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/chrome": "^0.0.245"
+  }
 }
