--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "npm run dev --workspace=extension-test-app",
     "build": "npm run build --workspaces --if-present",
-    "build:extension": "npm run build --workspace=app-ui --workspace=extension-specific && npm run build-extension:ui --workspace=utility-scripts && npm run build-extension:specific --workspace=utility-scripts"
+    "build:extension": "npm run build --workspace=app-ui && npm run build-extension:ui --workspace=utility-scripts && npm run build:extension-specific",
+    "build:extension-specific": "npm run build --workspace=extension-specific && npm run build-extension:specific --workspace=utility-scripts"
   },
   "devDependencies": {
     "prettier": "^3.0.3",
