--- a/packages/utility-scripts/package.json
+++ b/packages/utility-scripts/package.json
@@ -4,14 +4,18 @@
   "scripts": {
     "build-extension:ui": "ts-node ./src/build-extension/build-extension-ui.ts",
     "build-extension:specific": "ts-node ./src/build-extension/build-extension-specific.ts",
-    "codegen": "ts-node ./src/api-codegen/api-codegen.ts"
+    "codegen": "ts-node ./src/api-codegen/api-codegen.ts",
+    "icon-generator": "ts-node ./src/icon-generator/icon-generator.ts"
   },
   "dependencies": {
     "@rtk-query/codegen-openapi": "^1.0.0",
-    "fs-extra": "^11.1.1"
+    "canvas": "^2.11.2",
+    "fs-extra": "^11.1.1",
+    "to-ico": "^1.1.5"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.1",
+    "@types/to-ico": "^1.1.1",
     "ts-node": "^10.9.1",
     "typescript": "~4.5"
   }
