--- a/packages/utility-scripts/package.json
+++ b/packages/utility-scripts/package.json
@@ -2,8 +2,8 @@
   "name": "utility-scripts",
   "version": "0.1.0",
   "scripts": {
-    "build-extension:ui": "ts-node ./src/build-extension/build-extension-ui.ts",
-    "build-extension:specific": "ts-node ./src/build-extension/build-extension-specific.ts",
+    "bundle-extension:ui": "ts-node ./src/build-extension/build-extension-ui.ts",
+    "bundle-extension:specific": "ts-node ./src/build-extension/build-extension-specific.ts",
     "codegen": "ts-node ./src/api-codegen/api-codegen.ts",
     "icon-generator": "ts-node ./src/icon-generator/icon-generator.ts"
   },
