updated api-codegen name

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build-extension": "npm run build-extension:ui && npm run build-extension:specific",
     "build-extension:ui": "npm run build --workspace=app-ui && npm run bundle-extension:ui --workspace=utility-scripts",
     "build-extension:specific": "npm run build --workspace=extension-specific && npm run bundle-extension:specific --workspace=utility-scripts",
-    "utility:codegen": "npm run codegen --workspace=utility-scripts",
+    "utility:api-codegen": "npm run api-codegen --workspace=utility-scripts",
     "utility:icon-generator": "npm run icon-generator --workspace=utility-scripts"
   },
   "devDependencies": {
