nextjs name update

--- a/packages/extension-specific/public/manifest.json
+++ b/packages/extension-specific/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Next JS Chrome Extension",
+  "name": "Next.js Chrome Extension",
   "description": "Next.js Chrome Extension starter",
   "manifest_version": 3,
   "icons": {
