added cleanup before new build-extension

--- a/packages/utility-scripts/package.json
+++ b/packages/utility-scripts/package.json
@@ -2,6 +2,7 @@
   "name": "utility-scripts",
   "version": "0.1.0",
   "scripts": {
+    "bundle-extension:clean": "ts-node ./src/bundle-extension/bundle-extension-clean.ts",
     "bundle-extension:ui": "ts-node ./src/bundle-extension/bundle-extension-ui.ts",
     "bundle-extension:specific": "ts-node ./src/bundle-extension/bundle-extension-specific.ts",
     "api-codegen": "ts-node ./src/api-codegen/api-codegen.ts",
