--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "npm run dev --workspace=app-ui",
     "test": "npm run dev --workspace=extension-test-app",
     "build": "npm run build --workspaces --if-present",
-    "build-extension": "npm run build-extension:ui && npm run build-extension:specific",
+    "build-extension": "npm run bundle-extension:clean --workspace=utility-scripts && npm run build-extension:ui && npm run build-extension:specific",
     "build-extension:ui": "npm run build --workspace=app-ui && npm run bundle-extension:ui --workspace=utility-scripts",
     "build-extension:specific": "npm run build --workspace=extension-specific && npm run bundle-extension:specific --workspace=utility-scripts",
     "utility:api-codegen": "npm run api-codegen --workspace=utility-scripts",
