Added app title and description

--- a/packages/app-ui/.env.development
+++ b/packages/app-ui/.env.development
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_APP_DESCRIPTION=Example extension in development environment
+NEXT_PUBLIC_APP_DESCRIPTION=Example App UI in development environment
