--- a/packages/app-ui/.env.production
+++ b/packages/app-ui/.env.production
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_APP_DESCRIPTION=Example extension in production environment
+NEXT_PUBLIC_APP_DESCRIPTION=Example App UI in production environment
