serve command added

--- a/packages/app-ui/package.json
+++ b/packages/app-ui/package.json
@@ -5,6 +5,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "serve": "serve out",
     "lint": "next lint"
   },
   "dependencies": {
