added forgotten sourcemap

--- a/packages/extension-specific/tsconfig.json
+++ b/packages/extension-specific/tsconfig.json
@@ -15,6 +15,7 @@
     "isolatedModules": false, // Output to single file. Changed from true to false
     "jsx": "preserve",
     "incremental": true,
+    "sourceMap": true,
     "paths": {
       // Added paths
       "@/*": ["./src/*"]
