--- a/packages/extension-specific/package.json
+++ b/packages/extension-specific/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "scripts": {
     "build": "webpack",
-    "build-dev": "webpack --env mode=development"
+    "build:dev": "webpack --watch --env mode=development"
   },
   "dependencies": {
     "shared-lib": "^0.1.0"
